[gd_scene load_steps=16 format=2]

[ext_resource path="res://pixil-frame-0 (1).png" type="Texture2D" id=1]
[ext_resource path="res://Control.gd" type="Script" id=2]
[ext_resource path="res://download (1).png" type="Texture2D" id=3]
[ext_resource path="res://download.png" type="Texture2D" id=4]
[ext_resource path="res://player.tscn" type="PackedScene" id=5]
[ext_resource path="res://food.tscn" type="PackedScene" id=6]
[ext_resource path="res://enemy.tscn" type="PackedScene" id=7]
[ext_resource path="res://Menu.gd" type="Script" id=8]
[ext_resource path="res://mixkit-space-coin-win-notification-271.wav" type="AudioStream" id=9]
[ext_resource path="res://sadwhisle-91469.mp3" type="AudioStream" id=10]
[ext_resource path="res://enemy2.gd" type="Script" id=11]
[ext_resource path="res://food2.gd" type="Script" id=12]
[ext_resource path="res://PressStart2P-Regular.ttf" type="FontFile" id=13]

[sub_resource type="FontFile" id=1]
font_data = ExtResource( 13 )

[sub_resource type="FontFile" id=2]
font_data = ExtResource( 13 )

[node name="Node2D" type="Node2D"]
position = Vector2( -238, 188 )

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2( 865, 172 )
rotation = 3.14057
scale = Vector2( 1.56413, -1.36571 )
texture = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
process_mode = 3
offset_left = 513.0
offset_top = 301.0
offset_right = 553.0
offset_bottom = 341.0
script = ExtResource( 2 )

[node name="food" parent="Control" instance=ExtResource( 6 )]
process_mode = 1

[node name="food2" parent="Control" instance=ExtResource( 6 )]
process_mode = 1
script = ExtResource( 12 )

[node name="enemy" parent="Control" instance=ExtResource( 7 )]
process_mode = 1
position = Vector2( -191, -53 )

[node name="enemy2" parent="Control" instance=ExtResource( 7 )]
process_mode = 1
position = Vector2( -191, -53 )
script = ExtResource( 11 )

[node name="player" parent="Control" instance=ExtResource( 5 )]
process_mode = 1
position = Vector2( -141, -368 )

[node name="Menu2" type="Sprite2D" parent="Control"]
process_mode = 3
visible = false
position = Vector2( 393, -120 )
scale = Vector2( 0.654917, 0.656613 )
texture = ExtResource( 4 )
script = ExtResource( 8 )

[node name="Menu" type="Sprite2D" parent="Control"]
process_mode = 3
visible = false
position = Vector2( 394, -120 )
scale = Vector2( 0.654917, 0.656613 )
texture = ExtResource( 3 )

[node name="Button" type="Button" parent="Control"]
process_mode = 3
offset_left = -341.0
offset_top = -780.0
offset_right = 1065.0
offset_bottom = 553.0
flat = true

[node name="Score" type="RichTextLabel" parent="Control"]
offset_left = 487.0
offset_top = -472.0
offset_right = 538.0
offset_bottom = -455.0
scale = Vector2( 3, 4 )
size_flags_stretch_ratio = 0.0
theme_override_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
text = "[rainbow]0"
tab_size = 24
text = "0"
fit_content_height = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Control"]
stream = ExtResource( 9 )

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="Control"]
stream = ExtResource( 10 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 717.0
offset_top = -173.0
offset_right = 814.0
offset_bottom = -156.0
scale = Vector2( 3, 4 )
pivot_offset = Vector2( 1, 0 )
size_flags_stretch_ratio = 0.0
theme_override_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
text = "[shake]Score:"
tab_size = 24
text = "Score:"
fit_content_height = true

[connection signal="body_entered" from="Control/food2" to="Control/food2" method="_on_food2_body_entered"]
[connection signal="body_entered" from="Control/enemy2" to="Control/enemy2" method="_on_enemy2_body_entered"]
[connection signal="pressed" from="Control/Button" to="Control" method="_on_Button_pressed"]
